# iphone-cli

./: .gitignore  README.md  pyproject.toml  start.sh
iphone_cli/: __init__.py  cli.py  output.py  sdk.py
iphone_cli/commands/: __init__.py  calendar.py  companion.py  contacts.py  health.py  location.py  notifications.py  shortcut.py
iphone_cli/companion/: __init__.py  client.py  discovery.py  types.py
iphone_cli/core/: __init__.py  screenshot.py  wda.py
iphone_cli/mcp/: server.py
iphone_cli/mock/: __init__.py  __main__.py  server.py
